--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2395,7 +2395,7 @@
 	#banner {
 		background-attachment: scroll, scroll, scroll, fixed;
 		background-color: #645862;
-		background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/banner.jpg");
+		background-image: url("images/pic01.jpg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/pic01.jpg");
 		background-position: bottom left, bottom right, top left, top center;
 		background-repeat: no-repeat, no-repeat, repeat, no-repeat;
 		background-size: 25em, 25em, auto, cover;
@@ -2414,7 +2414,7 @@
 			-webkit-animation-fill-mode: forwards;
 			-ms-animation-fill-mode: forwards;
 			animation-fill-mode: forwards;
-			
+
 			color: #fff;
 			display: inline-block;
 			opacity: 0;
@@ -2635,6 +2635,8 @@
 			}
 
 	}
+
+
 
 /* Narrow */
 
